src/objects/c2g__codaJournal__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpjournal</customHelpPage>
    <description>Acts as a container for a number of journal lines and provides common information about the document.</description>
    <fields>
        <fullName>c2g__Credits__c</fullName>
        <label>Credits</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaJournalLineItem__c.c2g__Value__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaJournalLineItem__c.c2g__Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__JournalCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal is expressed in a currency</description>
        <label>Journal Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__JournalDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The effective date for the journal</description>
        <label>Journal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__JournalDescription__c</fullName>
        <description>A description for the whole document</description>
        <label>Journal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__JournalRate__c</fullName>
        <label>Journal Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__JournalStatus__c</fullName>
        <description>The posting status</description>
        <label>Journal Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Original Journal)</relationshipLabel>
        <relationshipName>CancellingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 1</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 1)</relationshipLabel>
        <relationshipName>Journals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 2</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 2)</relationshipLabel>
        <relationshipName>Journals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 3</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 3)</relationshipLabel>
        <relationshipName>Journals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue1__c</fullName>
        <label>Override Debit Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue2__c</fullName>
        <label>Override Debit Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue3__c</fullName>
        <label>Override Debit Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <description>A reference, possibly to an external document</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Source Journal Number)</relationshipLabel>
        <relationshipName>ReversingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue3__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxableValueTotal__c</fullName>
        <label>Taxable Value Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxableValue__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Total__c</fullName>
        <label>Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Journal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Matching Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelling Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reversing Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciliation Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End Journal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffgl__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffgl__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Fee_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Payment</label>
        <referenceTo>loan__Fee_Payment__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Repayment_Transaction_Reversal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repayment Transaction Reversal</label>
        <referenceTo>loan__Repayment_Transaction_Adjustment__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__WasGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WasGenerated</label>
        <type>Checkbox</type>
    </fields>
    <label>Journal</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__JournalDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Reference__c</columns>
        <columns>c2g__IncomeScheduleGroup__c</columns>
        <columns>c2g__JournalCurrency__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__JournalStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JNL{000000}</displayFormat>
        <label>Journal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>